--- a/orga2016TP0/Informe/orga2016TP0.tex
+++ b/orga2016TP0/Informe/orga2016TP0.tex
@@ -165,6 +165,16 @@ Los valores correspondientes a la parte real e imaginaria del par\'ametro comple
 \center
 Fatal: invalid c specification.
 
+\raggedright
+\subsection{Prueba 4}
+Par\'ametro r inv\'alido
+\begin{center}
+    ./orga2016TP0 -r 0x480 -c 2-3i -w 2 -H 2 -o Julia.pgm\\
+\end{center}
+Tanto el ancho como el alto de la im\'agen deben ser mayores a 0
+\center
+Fatal: invalid r specification.
+
 \newpage
 \raggedright
 \section{Codigo}
